<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="339dp"
        android:layout_height="177dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="40dp"
        app:srcCompat="@drawable/imagen1" />

    <EditText
        android:id="@+id/name_input"
        android:layout_width="337dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/name"
        android:inputType="text"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/last_name_input"
        android:layout_width="342dp"
        android:layout_height="51dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/last_name"
        android:inputType="text"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/email_input"
        android:layout_width="340dp"
        android:layout_height="55dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/e_mail"
        android:inputType="textEmailAddress"
        android:textSize="24dp" />

    <EditText
        android:id="@+id/password_input"
        android:layout_width="343dp"
        android:layout_height="49dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/input_margin"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="24dp" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="373dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="@dimen/input_margin"
        android:text="@string/terms"
        android:textSize="20dp"
        android:textStyle="italic" />

    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="219dp"
        android:layout_height="62dp"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:background="@drawable/round_button"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20dp" />


</LinearLayout>