<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/grupo2"
        android:layout_marginTop="40dp"
        android:layout_gravity="center"/>

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-light"
        android:text="@string/our_menu"
        android:textAllCaps="true"
        android:layout_gravity="center_horizontal"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        />


    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:columnCount="2"
        android:paddingHorizontal="50dp">

        <Button
            android:id="@+id/button_antojitos"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/antojitos_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />


        <Button
            android:id="@+id/button_combinations"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/combinations_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />
        <Button
            android:id="@+id/button_tortas"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/first_gradient"
            android:backgroundTint="@color/rojo"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/tortas_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />
        <Button
            android:id="@+id/button_sopas"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:background="@drawable/first_gradient"
            android:backgroundTint="@color/rojo"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/sopas_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />
        <Button
            android:id="@+id/button_drinks"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/drinks_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />
        <Button
            android:id="@+id/button_especialidades"
            android:layout_columnWeight="1"
            android:layout_gravity="fill_horizontal"
            android:layout_marginRight="@dimen/menu_buttons_margin"
            android:background="@drawable/first_gradient"
            android:paddingHorizontal="@dimen/menu_buttons_paddings"
            android:paddingVertical="@dimen/menu_buttons_paddings"
            android:text="@string/especialidades_menu"
            android:textColor="@color/white"
            android:textSize="@dimen/menu_buttons_text" />
    </GridLayout>
</LinearLayout>